@@ -751,6 +751,7 @@ of MediaWiki:Newpagetext) to &action=edit, if page is new.
 
 * (bug 3292) Fix move-over-redirect test when current entries are not plaintext
 * (bug 2078) Don't hide watch tab on preview
+* (bug 3306) Document $wgLocalTZoffset
 
 
 === Caveats ===
